Fixed Spring for now

--- a/Spring/1. Spring.md
+++ b/Spring/1. Spring.md
@@ -106,7 +106,7 @@ and therefore provides messaging (i18n or internationalization) functionality.
   IoC is a design pattern that describes inverting the flow of control in a system,
   so execution flow is not controlled by a central piece of code.
 
-  This means that components should only depend on abstractions of other components and are not be responsible for handling the creation of dependent objects.
+  This means that `components should only depend on abstractions of other components and are not be responsible for handling the creation of dependent objects`.
 
   The advantages of this architecture are:
 
@@ -123,7 +123,7 @@ and therefore provides messaging (i18n or internationalization) functionality.
 
 - ### What is Dependency Injection?
 
-  Dependency injection is a pattern we can use to implement IoC, where the control being inverted is setting an object's dependencies.
+  `Dependency injection is a pattern we can use to implement IoC`, where the control being inverted is setting an object's dependencies.
 
   Connecting objects with other objects, or “injecting” objects into other objects, is done by an assembler rather than by the objects themselves.
 
@@ -160,14 +160,15 @@ and therefore provides messaging (i18n or internationalization) functionality.
   ```
 
   3. #### Field-Based Dependency Injection:
+
      In case of Field-Based DI, we can inject the dependencies by marking them with an @Autowired annotation:
 
-  ```java
-  public class Store {
-    @Autowired
-    private Item item;
-  }
-  ```
+     ```java
+     public class Store {
+       @Autowired
+       private Item item;
+     }
+     ```
 
   While constructing the Store object, if there's no constructor or setter method to inject the Item bean,
   the container will use reflection to inject Item into Store.
@@ -177,19 +178,21 @@ and therefore provides messaging (i18n or internationalization) functionality.
   - a. This method uses reflection to inject the dependencies, which is costlier than constructor-based or setter-based injection.
     Wiring allows the Spring container to automatically resolve dependencies between collaborating beans by inspecting the beans that have been defined.
     There are four modes of autowiring a bean using an XML configuration:
+
     1. #### no: the default value
        this means no autowiring is used for the bean and we have to explicitly name the dependencies.
     2. #### byName:
+
        autowiring is done based on the name of the property, therefore Spring will look for a bean with the same name as the property that needs to be set.
 
-  3.  #### byType:
+    3. #### byType:
 
-      similar to the byName autowiring, only based on the type of the property.
+       similar to the byName autowiring, only based on the type of the property.
 
-      This means Spring will look for a bean with the same type of the property to set. If there's more than one bean of that type, the framework throws an exception.
+       This means Spring will look for a bean with the same type of the property to set. If there's more than one bean of that type, the framework throws an exception.
 
-  4.  #### constructor:
-      autowiring is done based on constructor arguments, meaning Spring will look for beans with the same type as the constructor arguments.
+    4. #### constructor:
+       autowiring is done based on constructor arguments, meaning Spring will look for beans with the same type as the constructor arguments.
 
 - ### Lazy Initialized Beans:
 
