--- a/JAVA/Concepts/0. Combined concepts.md
+++ b/JAVA/Concepts/0. Combined concepts.md
@@ -27,23 +27,14 @@
   5.  - A Java abstract class can have class members like private, protected, etc.
       - Members of a Java interface are public by default.
 
-- ### What are Primitive Types?
+- ### What are categories of datatypes?
 
-  Java defines eight primitive data types:
+  There are 4 categories of data types
 
-  1.  byte
-  2.  short
-  3.  int
-  4.  long
-  5.  float
-  6.  double
-  7.  boolean and
-  8.  char.
-
-  All other variables in java are object reference types.
-
-  - Primitive types in Java are called literals.
-  - Primitive types in Java are statically-typed, which means all variables must first be declared before they can be used,
+  1.  Integer
+  2.  Boolean
+  3.  Floating
+  4.  Character
 
 - ### What are Wrapper Classes?
 
