added example code for comparator, io and date time api

--- a/JAVA/5 or 1.5/1. Inroduction.md
+++ b/JAVA/5 or 1.5/1. Inroduction.md
@@ -50,11 +50,26 @@ public String toString() {
 
 ## 5. Enums:
 
+Inherit from Java Enum class
+can have members, fields, methods, constructors
+
+We can pass initial state to the constructor
+
 `Strongly-typed`, fixed set of constants (`better than` traditional `final static fields`).
 
 ```java
 public enum Day {
     MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY, SUNDAY
+}
+
+public enum Flight{
+    FA,
+    CO,
+    PA("Shahrukh");
+    private String title;
+    private Flight(String title){
+        this.title = title;
+    }
 }
 
 ```
