--- a/JAVA/Concepts/0. Combined concepts.md
+++ b/JAVA/Concepts/0. Combined concepts.md
@@ -31,10 +31,32 @@
 
   There are 4 categories of data types
 
-  1.  Integer
-  2.  Boolean
-  3.  Floating
-  4.  Character
+  - **Integer** ( default => 0 )
+
+    1.  byte 8bits
+    2.  short 16bits
+    3.  int 32bits
+    4.  long(l) 64bits
+
+  - **Boolean** ( default => false )
+
+    5. boolean 1bit
+
+  - **Floating** ( default => 0.0 )
+
+    6. float(f) 32bits
+    7. double(d) 64bits
+
+  - **Character** ( default => '\u0000' )
+    use (\u) along with 4-digit hex value or just 'U'
+
+    8.  char 16bits
+
+- ### Operator Precedence?
+
+  | Postfix  | Prefix   | Multiplicative | Additive |
+  | -------- | -------- | -------------- | -------- |
+  | x++, x-- | ++x, --x | \*, /, %       | +, -     |
 
 - ### What are Wrapper Classes?
 
