Added streams and code

--- a/JAVA/5 or 1.5/1. Inroduction.md
+++ b/JAVA/5 or 1.5/1. Inroduction.md
@@ -2,18 +2,7 @@
 
 ## Key Features:
 
-## 1. Generics:
-
-Generics were introduced to provide `compile-time type safety` for collections and other data structures.
-
-```java
-List<String> list = new ArrayList<>();
-list.add("Hello");
-String s = list.get(0); // No need for casting
-
-```
-
-## 2. Enhanced for Loop (for-each Loop):
+## 1. Enhanced for Loop (for-each Loop):
 
 Simplified the way to iterate over collections and arrays.
 
@@ -25,7 +14,7 @@ for (String item : list) {
 
 ```
 
-## 3. Autoboxing and Unboxing:
+## 2. Autoboxing and Unboxing:
 
 Automatic conversion between `primitive types `(like int, double) and their corresponding `wrapper` classes (Integer, Double).
 
@@ -36,7 +25,7 @@ int n = list.get(0); // Unboxing of Integer to int
 
 ```
 
-## 4. Metadata Annotations:
+## 3. Metadata Annotations:
 
 Introduction of metadata annotations, allowing developers to include additional information in their code, which can be processed by the compiler or used at runtime.
 
@@ -48,7 +37,7 @@ public String toString() {
 
 ```
 
-## 5. Enums:
+## 4. Enums:
 
 Inherit from Java Enum class
 can have members, fields, methods, constructors
@@ -74,7 +63,7 @@ public enum Flight{
 
 ```
 
-## 6. Varargs:
+## 5. Varargs:
 
 Support for methods that accept a variable number of arguments.
 
@@ -87,10 +76,16 @@ public void printNumbers(int... numbers) {
 
 ```
 
-## 7. Concurrency Utilities:
+## 6. Concurrency Utilities:
 
 The `java.util.concurrent` package, providing a set of high-level concurrency utilities like `executors`, `concurrent collections`, and `synchronizers`.
 
-## 8. `Scanner`:
+## 7. `Scanner`:
 
 Introduction of the `Scanner` class for easier text parsing.
+
+```java
+Scanner sc = new Scanner(System.in)
+String ip = sc.nextLine();
+String parts = ip.split("");
+```
