--- a/JAVA/8/3. Java Streams.md
+++ b/JAVA/8/3. Java Streams.md
@@ -1,81 +1,97 @@
-### What are Java Streams?
+## What are Java Streams?
 
-Stream API is used to process collections of objects.
-A stream is a sequence of objects that supports various methods which can be pipelined to produce the desired result.
+Stream is a typed interface.
 
-A stream is `not a data structure` instead it takes input from the Collections, Arrays or I/O channels.
+## Overview
 
-Streams `dont change the original data structure`, they only provide the result
-as per the piplelined methods.
+The Stream API in Java allows for declarative processing of collections of data. It provides a high-level abstraction for Java Collections by performing operations in a functional-style.
 
-There are many ways to create a stream instance of different sources.
+## Characteristics of Streams
 
-Once created, the instance will not modify its source, therefore allowing the creation of multiple instances from a single source.
+- **Not a data structure:** Streams don't hold or modify data, they operate on the source.
+- **Lazy Invocation:** Stream operations are invoked only when necessary.
+- **Possibility for parallel execution:** Streams can be processed in parallel to leverage multi-core architectures.
 
-- Empty Stream:
+## Stream Operations
+
+Stream operations are divided into intermediate (lazy) and terminal (eager) operations.
+
+### Intermediate Operations
+
+They are lazy and return a new stream. They include:
+
+- `filter`: Returns a stream with elements that match a given predicate.
+- `map`: Transforms elements using a provided function.
+- `peek`: Performs an action on each element as they are consumed from the stream without modifying them.
+
+Example:
 
 ```java
-  Stream<String> streamEmpty = Stream.empty();
+List<String> collected = Stream.of("apple", "banana", "pear", "kiwi", "orange")
+                               .filter(s -> s.contains("a"))
+                               .peek(System.out::println) // this will print each element that passes the filter
+                               .map(String::toUpperCase)
+                               .collect(Collectors.toList());
 ```
 
-We often use the `empty()` method upon creation to avoid returning `null` for streams with no element:
+### Terminal Operations
+
+They are eager and close the stream. They include:
+
+- **forEach**: Performs an action for each element of the stream.
+- **collect**: Transforms the stream into a different form such as a List, Set, or Map.
+- **reduce**: Performs a reduction on the elements of the stream with the given function.
+- **count**: Returns the count of elements in the stream.
 
 ```java
-public Stream<String> streamOf(List<String> list) {
-return list == null || list.isEmpty() ? Stream.empty() : list.stream();
-}
-```
-
-- Stream of Collection:
-
-  We can also create a stream of any type of
-
-  #### Collection (Collection, List, Set):
-
-```java
-  Collection<String> collection = Arrays.asList("a", "b", "c");
-
-  Stream<String> streamOfCollection = collection.stream();
-```
-
-- #### Stream of Array:
-  An array can also be the source of a stream:
-
-```java
-  String[] arr = new String[]{"a", "b", "c"};
-
-  Stream<String> streamOfArrayFull = Arrays.stream(arr);
-
-  Stream<String> streamOfArrayPart = Arrays.stream(arr, 1, 3);
-```
-
-- #### Stream.builder():
-
-  When builder is used, the desired type should be additionally specified in the right part of the statement,
-  otherwise the build() method will create an instance of the Stream<Object>:
-
-```java
-  Stream<String> streamBuilder =
-  Stream.<String>builder().add("a").add("b").add("c").build();
-```
-
-- #### Stream.iterate():
-
-  Another way of creating an infinite stream is by using the iterate() method:
-
-```java
-  Stream<Integer> streamIterated = Stream.iterate(40, n -> n + 2).limit(20);
+long count = Stream.of(1, 2, 3, 4, 5)
+                   .filter(n -> n % 2 == 0)
+                   .count(); // This will return 2
 
 ```
 
-The first element of the resulting stream is the first parameter of the iterate() method.
+### Specialized Reductions
 
-When creating every following element, the specified function is applied to the previous element. In the example above the second element will be 42.
+These are terminal operations that return a specific type of result.
 
-- #### Stream of String:
+- **max/min**: Return the maximum/minimum element of the stream according to a given comparator.
+- **anyMatch**, **allMatch**, **noneMatch**: Return a boolean based on whether any, all, or no elements match a given predicate.
 
-  We can also use String as a source for creating a stream with the help of the chars() method of the String class.
+```java
+OptionalInt maxVal = IntStream.of(1, 2, 3, 4, 5)
+                              .max(); // This will return an OptionalInt describing the maximum value, 5
 
-  Since there is no interface for CharStream in JDK, we use the IntStream to represent a stream of chars instead.
+boolean allEven = IntStream.of(2, 4, 6)
+                           .allMatch(n -> n % 2 == 0); // This will return true
 
-Java 8 streams can't be reused
+```
+
+### Collectors
+
+Collectors are used in conjunction with collect terminal operation to accumulate elements into a summary result.
+
+```java
+List<String> list = Stream.of("apple", "banana", "pear", "kiwi", "orange")
+                          .collect(Collectors.toList()); // This collects elements into a List
+
+```
+
+### Lazy Invocation
+
+Stream operations do not run until they are needed. This is termed as "`lazy`" behavior.
+
+```java
+List<String> list = Stream.of("apple", "banana", "pear", "kiwi", "orange")
+                          .filter(s -> {
+                              System.out.println("Filter: " + s);
+                              return s.contains("a");
+                          })
+                          .map(s -> {
+                              System.out.println("Map: " + s);
+                              return s.toUpperCase();
+                          })
+                          .collect(Collectors.toList());
+
+```
+
+In the above example, `println` statements will not execute until the `collect method` is `invoked`.
