--- a/JAVA/Collections Framework/1. Collection Interface.md
+++ b/JAVA/Collections Framework/1. Collection Interface.md
@@ -3,6 +3,8 @@
 The `Collection` interface is the foundation upon which the `Java Collections Framework` is built.
 It represents a group of objects, known as `elements`.
 
+It extends `Iterable` interface
+
 ## Characteristics
 
 - **General Purpose**: It is the most general interface for collection operations.
