--- a/JAVA/Collections Framework/2. List Interface.md
+++ b/JAVA/Collections Framework/2. List Interface.md
@@ -30,6 +30,8 @@ The `List` interface extends the `Collection` interface and represents an ordere
 
   - **_Description_**: ArrayList is a resizable-array implementation of the List interface. It provides fast random access and is very efficient for read operations. However, the insertion and deletion of elements can be slow, especially in the middle of the list, as elements need to be shifted.
 
+    It is sympathetic to CPU cache as we do it linearly.
+
   - **_Usage Scenario_**: Best used when frequent access of elements by index is required.
 
   - **_Key Characteristics_**:
@@ -52,7 +54,12 @@ The `List` interface extends the `Collection` interface and represents an ordere
 
   **_Description_**: LinkedList is implemented as a double-linked list. It's efficient for adding and removing elements at both the beginning and the end of the list, making it a good choice for implementing stacks and queues.
 
+  - Less CPU friendly
+
   **_Usage Scenario_**: Ideal for applications where frequent insertion and deletion operations are performed.
+
+  - use when adding elemets at start
+  - when adding removing a lot
 
   **_Key Characteristics_**:
 
