--- a/JAVA/Collections Framework/5. Map Interface.md
+++ b/JAVA/Collections Framework/5. Map Interface.md
@@ -36,6 +36,8 @@ The `Map` interface represents a collection that maps keys to values. A map `can
 
   - **_Usage Scenario_**: Ideal for situations where you need to quickly look up values based on unique keys.
 
+    Do not mutate teh key within HashMap
+
   - **_Key Characteristics_**:
 
   1.  Allows one null key and multiple null values.
@@ -43,6 +45,14 @@ The `Map` interface represents a collection that maps keys to values. A map `can
   2.  Offers `constant time` complexity for `get()` and `put()`, assuming the hash function disperses elements properly.
 
   3.  `Does not maintain any order` of the elements.
+
+  4.  uses the `.hashcode()` method, calculated from key, its datatype is `int`.
+
+  5.  maintains an array of `buckets`
+
+  6.  `hash % bucket_count` -> to select location
+
+  7.  buckets are `linked lists` to avoid collisions, can be `trees` if element's count goes more that `8`
 
   ```java
   Map<String, Integer> hashMap = new HashMap<>();
@@ -86,6 +96,8 @@ The `Map` interface represents a collection that maps keys to values. A map `can
   1.  Sorts the keys based on their natural ordering or a specified comparator.
 
   2.  Offers `log(n)` time complexity for common operations like `get()` and `put()`.
+
+  3.  Uses `red/black` binary trees ( balanced )
 
   ```java
   TreeMap<String, Integer> treeMap = new TreeMap<>();
