added execution models

--- a/JAVA/#Versions/5 or 1.5/4. More Locks.md
+++ b/JAVA/#Versions/5 or 1.5/4. More Locks.md
@@ -67,7 +67,7 @@ There are several others:
 
     - #### 1. Timeouts for Lock Acquisition:
 
-      Sometimes, you may want to avoid a situation where your application gets stuck because a thread is indefinitely waiting to acquire a lock. With ReentrantLock, you can use the tryLock() method to attempt to acquire a lock and specify a maximum time to wait for the lock. If the lock can't be acquired within the specified time, the thread can take alternative actions. This is useful for `avoiding potential deadlocks`.
+      Sometimes, you may want to avoid a situation where your application gets stuck because a thread is indefinitely waiting to acquire a lock. With ReentrantLock, you can use the `tryLock()` method to attempt to acquire a lock and specify a maximum time to wait for the lock. If the lock can't be acquired within the specified time, the thread can take alternative actions. This is useful for `avoiding potential deadlocks`.
 
       ```java
          ReentrantLock lock = new ReentrantLock();
