--- a/JAVA/#Versions/5 or 1.5/5. Execution Models.md
+++ b/JAVA/#Versions/5 or 1.5/5. Execution Models.md
@@ -1,92 +1,63 @@
-### 1. Producer-Consumer
+# Concurrency Patterns in Java
 
-The queue between the producers and consumers is a `bound resource`. This means `producer` must wait for `free space in the queue` before writing and `consumers` must wait until there is `something` in the queue to consume.
+## Overview
 
-### 2. Readers-Writers
+This document provides an overview of common concurrency patterns (execution models) used in multithreaded programming to manage threads, synchronize access to shared resources, and ensure data consistency.
 
-When you have a shared resource that primarily serves a source of information for readers, but is occasionly updated by the writers, `throughput` is an issue.
+## Common Concurrency Patterns
 
-Emphasizing throughput can cause `starvation` and the accumulation of stale information.
+### 1. [Producer-Consumer Model](https://github.com/Shahtr1/Data-Structures-and-Algorithms/tree/main/java/_9_Threads/_4_execution_models/_1_producer_consumer_problem)
 
-`Emphasizing throughput` in this context means trying to maximize the rate at which both reading and writing operations can be performed while maintaining correctness and fairness
+- **Description**: In this model, **producers** generate data and place it into a shared buffer or queue, while **consumers** take data from the buffer to process it.
+- **Problem Solved**: Ensures that producers and consumers operate at different speeds without losing data or creating race conditions.
+- **Use Case**: Logging systems, data pipelines, job processing queues.
 
-The challenge is to satisfy the needs of both readers and writers to satisfy correct operation, provide reasonable throughput and avoid starvation.
+### 2. [Readers-Writers Problem](https://github.com/Shahtr1/Data-Structures-and-Algorithms/tree/main/java/_9_Threads/_4_execution_models/_2_readers_writers_problem)
 
-A simple strategy makes writers wait until there are no readers using a resource before they can update it.
+- **Description**: In scenarios where multiple threads read from a shared resource and others write to it, this model prioritizes access control:
+  - **Readers** can access the resource simultaneously.
+  - **Writers** require exclusive access.
+- **Problem Solved**: Prevents data corruption when multiple threads read and write to the same resource.
+- **Use Case**: Database systems, caching layers, configuration management.
 
-If readers keep coming in continuously, writers won't get a chance to update, causing writer `"starvation."`
+### 3. [Dining Philosophers Problem](https://github.com/Shahtr1/Data-Structures-and-Algorithms/tree/main/java/_9_Threads/_4_execution_models/_3_dining_philosophores)
 
-On the other hand, if frequent readers are given priority, the overall system's speed (throughput) will be reduced.
+- **Description**: Models a scenario where multiple threads (philosophers) compete for shared resources (forks) to perform an action (eating). It’s a metaphor for avoiding deadlock and starvation in resource allocation.
+- **Problem Solved**: Prevents deadlock and ensures fairness among threads.
+- **Use Case**: Resource allocation in distributed systems, avoiding circular waits.
 
-It's a trade-off between fairness for readers and efficiency for writers.
+### 4. [Thread Pool](https://github.com/Shahtr1/Data-Structures-and-Algorithms/tree/main/java/_9_Threads/_4_execution_models/_3_dining_philosophores)
 
-### 3. Dining Philosophers
+- **Description**: A pool of reusable worker threads that execute tasks submitted by producers. This model reduces the overhead of thread creation and destruction.
+- **Problem Solved**: Manages thread lifecycle efficiently and prevents resource exhaustion.
+- **Use Case**: Web servers, database connection pools, parallel data processing.
 
-Picture this – a group of philosophers gathered around a circular table. Each philosopher has a fork on their left. In the center, there's a delicious bowl of spaghetti. Philosophers spend their time thinking, but when they get hungry, they must pick up the forks on both sides to eat.
+### 5. [Barrier Pattern](https://github.com/Shahtr1/Data-Structures-and-Algorithms/tree/main/java/_9_Threads/_4_execution_models/_5_barrier_pattern)
 
-Here's the catch: a philosopher can't eat unless they have both forks, and if their neighbors are using one of those forks, they have to wait. After eating, they put the forks back and think again until hunger strikes.
+- **Description**: Ensures that multiple threads reach a common point (barrier) before any of them proceed further. Useful for coordinating multiple threads to complete tasks in phases.
+- **Problem Solved**: Synchronizes threads at specific checkpoints to ensure they all proceed together.
+- **Use Case**: Parallel algorithms, simulations, or collaborative work.
 
-Now, replace philosophers with threads and forks with resources. This scenario mirrors many enterprise applications where processes compete for resources. Without careful design, such systems can run into issues like deadlock, livelock, and reduced efficiency.
+### 6. [Future and Promise](https://github.com/Shahtr1/Data-Structures-and-Algorithms/tree/main/java/_9_Threads/_4_execution_models/_6_future_and_promises)
 
-### Beware Dependencies Between Synchronized Methods
+- **Description**: Allows a thread to perform asynchronous computations and retrieve results in the future once they are available.
+- **Problem Solved**: Simplifies handling asynchronous operations and callbacks.
+- **Use Case**: Asynchronous I/O, parallel computation, non-blocking HTTP requests.
 
-The Java language has the notion of synchronized, which protects and individual method.
-`Avoid using more than one method on a shared object`
+### 7. [Pipelining Pattern](https://github.com/Shahtr1/Data-Structures-and-Algorithms/tree/main/java/_9_Threads/_4_execution_models/_7_pipelining_pattern)
 
-There will be times when you must use more than one method on a shared object. When this is the case, there are three ways to make the code correct:
+- **Description**: Tasks are split into multiple stages, where each stage processes data and passes it to the next. Each stage runs in its own thread.
+- **Problem Solved**: Increases throughput by parallelizing different stages of a task.
+- **Use Case**: Image processing pipelines, ETL (Extract, Transform, Load) processes.
 
-Imagine you have a class called `SharedObject` with two synchronized methods: `method1` and `method2`. These methods can be accessed by multiple threads concurrently. Now, let's explore the `three` approaches to deal with this situation:
+### 8. [Scheduler Pattern](https://github.com/Shahtr1/Data-Structures-and-Algorithms/tree/main/java/_9_Threads/_4_execution_models/_8_scheduler_pattern)
 
-- ### 1. Client-Based Locking:
+- **Description**: Manages how and when threads are scheduled to run, usually based on priorities, deadlines, or fairness policies.
+- **Problem Solved**: Ensures optimal utilization of CPU and system resources.
+- **Use Case**: Task scheduling, periodic data backups, automated reports.
 
-  This approach places the responsibility on the code that uses the `SharedObject`. It means the code calling these methods should be aware of the need for synchronization.
+## Conclusion
 
-  ```java
-        synchronized (sharedObject) { // You manually acquire a lock on the shared object
-            sharedObject.method1();
-            sharedObject.method2();
-            // ... other synchronized method calls
-        } // Release the lock when you're done
+The patterns described above are fundamental to building efficient, scalable, and reliable multi-threaded applications. By applying the right pattern based on the problem at hand, you can ensure thread synchronization, improve performance, and avoid common pitfalls such as deadlock and race conditions.
 
-  ```
-
-- ### 2. Server-Based Locking:
-
-  Here, you modify the SharedObject class itself to provide a method that wraps the synchronized methods and handles the locking.
-
-  ```java
-    public synchronized void doAllOperations() {
-        method1();
-        method2();
-        // ... other synchronized method calls
-    }
-
-  ```
-
-  The client code then calls `doAllOperations()` instead of calling individual methods.
-
-- ### 3. Adapter Server:
-
-  In cases where you can't modify the `SharedObject` class, you create a new class (an `adapter`) that holds an instance of SharedObject and adds synchronization.
-
-  ```java
-    public class SynchronizedAdapter {
-        private final SharedObject original;
-
-        public SynchronizedAdapter(SharedObject original) {
-            this.original = original;
-        }
-
-        public synchronized void synchronizedMethod1() {
-            original.method1();
-        }
-        // ... implement other synchronized methods in a similar way
-    }
-
-  ```
-
-  Now, you use the `SynchronizedAdapter` instead of the original `SharedObject` when you want synchronized access to its methods.
-
-## Recommendation:
-
-`Keep your synchronized sections as small as possible`
+---
