Added some stuff about trees

--- a/JAVA/Collections Framework/3. Set Interface.md
+++ b/JAVA/Collections Framework/3. Set Interface.md
@@ -87,3 +87,17 @@ The `Set` interface extends the `Collection` interface and represents a collecti
   }
 
   ```
+
+- **4. EnumSet**
+
+  - EnumSet is a high-performance, specialized Set implementation for use with enum types only.
+
+  ```java
+  enum Day { MON, TUE, WED, THU, FRI, SAT, SUN }
+  EnumSet<Day> weekend = EnumSet.of(Day.SAT, Day.SUN);
+  ```
+
+  - Backed internally by a bit vector (bitmask), not EnumMap.
+  - Each enum constant is assigned a unique bit in a long/int — this enables:
+  - Fast operations: O(1) for add, remove, contains
+  - Zero collisions — no need for hashing or linked lists
