--- a/JAVA/Collections Framework/5. Map Interface.md
+++ b/JAVA/Collections Framework/5. Map Interface.md
@@ -111,7 +111,7 @@ The `Map` interface represents a collection that maps keys to values. A map `can
 
   ```
 
-- **4. Hashtable**
+- **4. Hashtable (Legacy)**
 
   **_Description_**: `Hashtable` is a `synchronized` implementation of Map. `Similar to HashMap`, it stores elements in key-value pairs but synchronizes access to the elements.
 
@@ -130,3 +130,30 @@ The `Map` interface represents a collection that maps keys to values. A map `can
   System.out.println(hashtable.get("Pi")); // 3.14159
 
   ```
+
+  - Coarse-grained locking (entire map)
+  - Slower (all ops block)
+  - All methods are synchronized
+
+- **5. ConcurrentHashMap**
+
+  - Thread safety method: Fine-grained locking (bucket-level)
+  - Performance (multi-threaded): High (non-blocking reads)
+  - Synchronization style: Internally uses synchronized + CAS
+
+- **6. EnumMap**
+
+  - EnumMap is a specialized Map implementation designed to use Java Enums as keys.
+
+  ```java
+  EnumMap<Day, String> schedule = new EnumMap<>(Day.class);
+  schedule.put(Day.MONDAY, "Work");
+  ```
+
+  | Feature                  | Value                                          |
+  | ------------------------ | ---------------------------------------------- |
+  | **Key type**             | Must be an `enum` type                         |
+  | **Performance**          | Faster than `HashMap` (internally uses arrays) |
+  | **Ordering**             | Maintains keys in **natural enum order**       |
+  | **Null keys allowed?**   | ❌ No (throws `NullPointerException`)          |
+  | **Null values allowed?** | ✅ Yes                                         |
