Added more data

--- a/java/#Versions/8/2. Functional interfaces.md
+++ b/java/#Versions/8/2. Functional interfaces.md
@@ -5,43 +5,44 @@ but can have `multiple default and static method`.
 
 ### Example:
 
-    ````txt
-    	Runnable -----> run()
-    	Callable ----->  call()
-    	Comparable -----> compareTo()
-    	Comparator -----> compare()
-    	Consumer ------> accept()
-    	Predicate -------> test()
-    	Supplier --------> get()
-    ```
+```txt
+Runnable -----> run()
+Callable ----->  call()
+Comparable -----> compareTo()
+Comparator -----> compare()
+Consumer ------> accept()
+Predicate -------> test()
+Supplier --------> get()
+BiFunction --------> apply()
+```
 
 It has annotation `@FunctionalInterface`
 
 ### What is Consumer Functional Interface?
 
-`Consumer<T>` is an in-built functional interface introduced in Java 8.
-Consumer can be used in all contexts where an object needs to be consumed i.e.,
+- `Consumer<T>` is an in-built functional interface introduced in Java 8.
+- Consumer can be used in all contexts where an object needs to be consumed i.e.,
 
 taken as input, and some operation is to be performed on the object without returning any result.
 
 ```java
 
-    void accept(T t);
+void accept(T t);
 
-    //////// Consumer example ////////
+//////// Consumer example ////////
 
-    main(){
-    	Consumer<Integer> consumer = t -> sysout("Printing : " + t);
-    	consumer.accept(10);
+main(){
+	Consumer<Integer> consumer = t -> sysout("Printing : " + t);
+	consumer.accept(10);
 
-    	List<Integer> list = Arrays.asList(1, 2, 3, 4, 5);
+	List<Integer> list = Arrays.asList(1, 2, 3, 4, 5);
 
-    	list.stream().forEach(consumer);
+	list.stream().forEach(consumer);
 
-    	// or pass directly
+	// or pass directly
 
-    	list.stream().forEach(t -> sysout("Printing : " + t));
-    }
+	list.stream().forEach(t -> sysout("Printing : " + t));
+}
 ```
 
 ### What is Predicate Functional Interface?
@@ -50,17 +51,17 @@ This interface is used for conditional check
 where you think, we can use these true/false returning functions in day to day programming we should choose Predicate.
 
 ```java
-    boolean test(T t);
+boolean test(T t);
 
-    //////// Predicate Example ///////
+//////// Predicate Example ///////
 
-    main(){
+main(){
 
-    	List<Integer> list = Arrays.asList(1, 2, 3, 4, 5);
+	List<Integer> list = Arrays.asList(1, 2, 3, 4, 5);
 
-    	list.stream().filter(t -> t % 2 == 0).forEach(t -> sysout("Even : " + t));
+	list.stream().filter(t -> t % 2 == 0).forEach(t -> sysout("Even : " + t));
 
-    }
+}
 ```
 
 ### What is Supplier Functional Interface?
@@ -68,83 +69,113 @@ where you think, we can use these true/false returning functions in day to day p
 Supplier can be used in all contexts where there is no input but an output is expected.
 
 ```java
-    T get();
+T get();
 
-    //////// Supplier Example ////////
+//////// Supplier Example ////////
 
-    Supplier<String> supplier = () -> {
-    	return "Hi hero";
+Supplier<String> supplier = () -> {
+	return "Hi hero";
+}
+
+sysout(supplier.get());
+
+List<String> list = Arrays.asList("a", "b");
+
+sysout(list.stream().findAny().orElseGet(supplier));
+
+```
+
+### What is BiFunction Functional Interface?
+
+- Takes two inputs of types T and U
+- Returns one result of type R
+
+```java
+@FunctionalInterface
+public interface BiFunction<T, U, R> {
+    R apply(T t, U u);
+}
+```
+
+```java
+import java.util.function.BiFunction;
+
+public class BiFunctionExample {
+    public static void main(String[] args) {
+        BiFunction<Integer, Integer, Integer> add = (a, b) -> a + b;
+
+        int result = add.apply(5, 3);
+        System.out.println("Result: " + result);  // Output: 8
     }
+}
 
-    sysout(supplier.get());
+```
 
-    List<String> list = Arrays.asList("a", "b");
+#### Realistic Example: Combine First and Last Name
 
-    sysout(list.stream().findAny().orElseGet(supplier));
-
+```java
+BiFunction<String, String, String> fullName = (first, last) -> first + " " + last;
+System.out.println(fullName.apply("Tony", "Stark"));
 ```
 
 ### How can we create our own FunctionalInterface?
 
 ```java
 
-    @FunctionalInterface
-    public interface MyFunctionalInterface{
+@FunctionalInterface
+public interface MyFunctionalInterface{
 
-    	// // Test 1 without parameters
-    	// void m1();
-
-
-    	// // Test 2 with parameter
-    	// void sum(int input);
+	// // Test 1 without parameters
+	// void m1();
 
 
-    	// Test 3 with return type and multiple args
-    	int subtract(int i1, int i2);
+	// // Test 2 with parameter
+	// void sum(int input);
 
 
-    	default void m2(){
-    		sysout("")
-    	}
-
-    	default void m3(){
-    		sysout("")
-    	}
-
-    	static void m4(){
-    		sysout("")
-    	}
-    }
-
-    public class MainApp{
-
-    	// // Test 1 without parameters
-    	// MyFunctionalInterface myInterface = () -> {
-    	// 	sysout("m1");
-    	// };
-
-    	// myInterface.m1();
+	// Test 3 with return type and multiple args
+	int subtract(int i1, int i2);
 
 
+	default void m2(){
+		sysout("")
+	}
 
-    	// // Test 2 with parameter
-    	// MyFunctionalInterface myInterface = (input) -> {
-    	// 	sysout("Sum : " + input);
-    	// }
+	default void m3(){
+		sysout("")
+	}
 
-    	// myInterface.sum(123);
+	static void m4(){
+		sysout("")
+	}
+}
+
+public class MainApp{
+
+	// // Test 1 without parameters
+	// MyFunctionalInterface myInterface = () -> {
+	// 	sysout("m1");
+	// };
+
+	// myInterface.m1();
 
 
 
-    	// Test 3 with return type and multiple args
-    	MyFunctionalInterface myInterface = (i1, i2) -> {
-    		return i2 - i1;
-    	};
+	// // Test 2 with parameter
+	// MyFunctionalInterface myInterface = (input) -> {
+	// 	sysout("Sum : " + input);
+	// }
 
-    	sysout(myInterface.subtract(8, 20));
-
-    }
+	// myInterface.sum(123);
 
 
 
+	// Test 3 with return type and multiple args
+	MyFunctionalInterface myInterface = (i1, i2) -> {
+		return i2 - i1;
+	};
+
+	sysout(myInterface.subtract(8, 20));
+
+}
 ```
