--- a/java/JVM/memory_model/2. gc.md
+++ b/java/JVM/memory_model/2. gc.md
@@ -218,6 +218,8 @@ G1 (Garbage First) is a region-based, mostly concurrent, low-pause-time garbage 
 - Breaks the heap into many small pieces (called regions)
 - Collects garbage from only the pieces with the most garbage first
 - Tries to keep pause times low, even on large heaps (multi-GB)
+- GC traverses the reference graph from GC roots.
+- Any object not reachable from these roots is considered **unreachable** → **collectable**.
 
 ### How G1 organizes memory
 
